--- a/sass/_commentForm.scss
+++ b/sass/_commentForm.scss
@@ -19,6 +19,11 @@
 			width: 2rem;
 		}
 
+		@include mq(320px) {
+			height: 1.5rem;
+			width: 1.5rem;
+		}
+
 		&.sm {
 			height: 2rem;
 			width: 2rem;
@@ -26,6 +31,11 @@
 			@include mq(500px) {
 				height: 1.5rem;
 				width: 1.5rem;
+			}
+
+			@include mq(320px) {
+				height: 0.7rem;
+				width: 0.7rem;
 			}
 		}
 	}
